k8s_servicemesh/10_fault-injection/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: backend
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: backend.training.svc.cluster.local
     # fault:
     #   abort:
     #     httpStatus: 500
     #     percentage:
     #       value: 100
     #   delay:
     #     fixedDelay: 3s
     #     percentage:
     #       value: 100
